6.20.1 (18-10-2020)
- Improvement: Add slot for number of ucs enrolled in dges candidacies screen

6.20.0 (14-10-2020)
- New Feature: Added Health Card Number to academic office screens according #UL-FBA-1051

6.19.10 (28-09-2020)
- Improvement: Better error message when an official instituition is required 
- Bug fix: Using iso-8859-1 instead of iso-8859-15 when importing DGES file 

6.19.9 (26-09-2020)
- Improvements: More labels changed in CGD interfaces

6.19.8 (26-09-2020)
- Improvements: More labels changed in CGD interfaces

6.19.7 (24-09-2020)
- Improvement: Always show CGD screen in enrolment process

6.19.6 (24-09-2020)
- Improvements: More labels changed in CGD interfaces

6.19.5 (23-09-2020)
- Bug fix: Dont let edit enrolments in enrolment process when it is automatic
- Bug fix: Removed random keyword

6.19.4 (21-09-2020)
- Improvements: More labels changed in CGD interfaces

6.19.3 (18-09-2020)
- Improvement: Modifications in CGD interfaces

6.19.2 (16-09-2020)
- Improvement: Changed labels

6.19.1 (15-09-2020)
- Refactor: Removed unnecessary slots authorizeSharingDataWithCGD and sharingDataWithCGDAnswered

6.19.0 (13-09-2020)
- Improvement: Add new step in 1Y1T to process academic requisitions before the process
- Refactor: Refactored the isSharingDataWithCGDAnswered in PersonUlisboaSpecifications to use the DataShareAuthorization

6.18.1 (27-08-2020)
- Refactor: Registration history report service API cleanup

6.18.0 (25-08-2020)
- Refactor: Moved CGD related classes to CGD module

6.17.1 (22-08-2020)
- Improvement: First name exported to moodle includes all names except last 

6.17.0 (11-08-2020)
- Improvement: Added column to registration history report, regarding previous reingressions including precedent registrations
- Refactor: Updated dependencies

6.16.1 (03-08-2020)
- Improvement: Update label for spent email when a request is concluded

6.16.0 (29-07-2020)